Refactor and add basic tests

--- a/hn/hn.conf
+++ b/hn/hn.conf
@@ -1,2 +1,11 @@
+# Configuration example for the daemon part
+
 [settings]
 interval = 200
+
+[watch.worker]
+watch = true
+regexes = elixir, erlang, python, rust, golang
+
+[notify.worker]
+notify = true
