--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,19 @@ python:
   - "3.3"
   - "3.4"
   - "nightly"
+
+git:
+  submodules: false
+
+# install libnanomsg
+install:
+  - git clone --quiet --depth=100 "https://github.com/nanomsg/nanomsg.git" ~/builds/nanomsg
+      && pushd ~/builds/nanomsg
+      && ./autogen.sh
+      && ./configure
+      && make
+      && sudo make install
+      && popd;
+
+before_script: make install
+script:  LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib make test
